# cu-hw-gps

./: ProjectHome.md
c/matrix/: matrix.hpp
gps/report/: cu_ece_meng.sty  hw_gps_receiver.bib  hw_gps_receiver.tex  proposal.tex
gps/utilities/defines_parser/: AUTHORS  README  configure.ac
gps/utilities/defines_parser/m4/: boost.m4
gps/utilities/defines_parser/src/: Makefile.am  expression.cpp  expression.h  input_parser.cpp  input_parser.h  macro_entry.h  main.cpp  parser.cpp  parser.h  string_helper.hpp  tokenizer.cpp  tokenizer.h  tree_node.cpp  tree_node.h
matlab/dds/: dds_designer.m
matlab/navigation/: elevazim.m  findsat.m  kalman_nav.m  rangecal.m
matlab/receiver/: SatToEcef.m  cacodegn.m  clear_track.m  cxcorr.m  elevazim.m  extract_bit.m  fll_fixed.m  parity_check.m  plot_track.m  process_almanac.m  survey_fft.m  twoscomp2dec.m
matlab/test_gen/: constant_h.m  convertbitpack2bit1.c  dds_sim.m  fft_plot.m  fll.m  gps_pack.m  load_hex_log.m  ones_to_twos.m  serial_close.m  serial_close_unix.c  serial_open.m  sqrt_fixed.m  transfer.c  write_vwf.m
matlab/waas_enabled_receiver/: TODO.txt  WAASCODEGN.m  carrier_lock_indicator.m  dll_float.m  ecef.m  findsat.m  fll_float.m  flldll.m  frame_lock.m  load_track.m  mmpolar.m  plldll.m  pseudocaion.m  solveposod.m
report/: cu_ece_meng.sty  hw_gps_receiver.bib  hw_gps_receiver.tex
utilities/data_feed/: exceptions.hpp  main.cpp  raw_socket_unix.cpp  raw_socket_unix.hpp  raw_socket_win.hpp  string_helper.hpp
utilities/defines_parser/: configure.ac
utilities/defines_parser_java/: DefinesParser.java  Expression.java  InputParser.java  MacroEntry.java  Manifest.txt  TreeNode.java
utilities/schedule/: schedule.php
utilities/transferd/: Makefile  command_client.c  command_client.h  list.c  (+4 more)
(+465 files in other folders)
