bin_PROGRAMS=defparser
defparser_SOURCES=main.cpp tokenizer.cpp tree_node.cpp parser.cpp expression.cpp input_parser.cpp
defparser_CPPFLAGS=$(BOOST_CPPFLAGS)
defparser_LDFLAGS=$(BOOST_REGEX_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS)
defparser_LDADD=$(BOOST_REGEX_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_SYSTEM_LIBS)